[Backend] 950 - inject broken filter for the attck matrix Errors on tests resolved